Fixing carousel caption color in dark mode.

--- a/inst/qmd/style.css
+++ b/inst/qmd/style.css
@@ -1,4 +1,8 @@
 .carousel { overflow: hidden; padding-bottom: 5rem; }
-.carousel-caption { top: 100%; }
+.carousel-caption { top: 100%;}
+.carousel-caption p {
+  font-weight: lighter;
+  color: var(--bs-body-color);
+}
 .carousel-inner { overflow: visible; }
 .carousel-control-next, .carousel-control-prev, .carousel-indicators { bottom: 4rem; }
